--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,9 +1,80 @@
 <div class="modal__content">
 <header class="modal__header">
-    <h2 class="modal__title">Términos y condiciones</h2>
+    <h1 class="modal__title">Términos y Condiciones de Uso de la Aplicación NIVO+ Anesthesic Digital System</h1>
     <button size="md" class="btn__primary--outline" id="closeModal">&times;</button>
 </header>
 <div class="modal__body">
-    <p>Al utilizar NIVO+, el software desarrollado por Anes Record Solutions S.A., ya sea a través de su sitio web, aplicaciones móviles u otros servicios asociados, usted acepta los términos y condiciones. El acceso continuo o el uso del sistema se considerará como aceptación plena de este descargo de responsabilidad. Si no está de acuerdo con alguno de estos términos, le solicitamos que no utilice los servicios ofrecidos por Anes Record Solutions S.A.</p>
+    <div>
+        <h3>Información del Titular de la App</h3>
+        <p>La aplicación <strong>NIVO+ Anesthesic Digital System</strong> (en adelante, <i>"la App"</i>) es desarrollada y propiedad de <strong>Anes Record Solutions S.A.</strong>, CUIT: 30-71846337-4 con domicilio en PRESBITERO BRENTANA 35 Piso:7 Dpto:B - EDIFICIO BURO 35, CIPOLLETTI, RÍO NEGRO.</p>
+    </div>
+    <div>
+        <h3>Definición del Usuario</h3>
+        <p>El usuario de la App deberá ser <strong>mayor de 18 años</strong>, residente en Argentina o ejercer su actividad en dicho país, y ser <strong>profesional de la salud en el campo de la anestesiología</strong>, en cumplimiento con las normativas aplicables a su profesión.</p>
+    </div>
+    <h3>1. Condiciones Generales</h3>
+    <p>La App permite a los profesionales de la salud en el campo de la anestesiología registrar y gestionar datos relacionados con los procedimientos anestésicos, generar informes en PDF y construir una base de datos orientada a reunir información sobre la práctica anestesiológica, con el objetivo de producir informes para el colectivo y generar hipótesis de investigación.</p>
+    <p>Para utilizar la App, el usuario debe <strong>aceptar previamente estos términos y condiciones</strong>.</p>
+    <h3>2. Política de Cobro</h3>
+    <p>Para acceder a las funcionalidades de la App, es posible que se requiera una suscripción o pago específico. Las tarifas de suscripción, facturación, y las modalidades de pago serán detalladas en el documento de <i>"Tarifas de Servicio"</i>, que podrá actualizarse periódicamente.</p>
+    <p>La facturación y pago se realizarán conforme a los términos establecidos en dicho documento y las leyes aplicables.</p>
+    <h3>3. Registración</h3>
+    <ul>
+        <li><strong>Requisitos de Registro:</strong> Para utilizar ciertas funcionalidades de la App, se le puede requerir crear una cuenta y proporcionar información precisa y completa.</li>
+        <li><strong>Responsabilidad del Usuario:</strong> Usted es responsable de mantener la confidencialidad de su cuenta y contraseña, así como de todas las actividades que ocurran bajo su cuenta.</li>
+        <li><strong>Uso Aceptable:</strong> Usted se compromete a utilizar la App únicamente para fines legales y de acuerdo con estos Términos.</li>
+    </ul>
+    <h3>4. Consentimiento del Paciente y Responsabilidad del Profesional</h3>
+    <p>De acuerdo con la normativa de protección de datos personales de Argentina, el <strong>titular de los datos de salud y de cualquier dato clínico registrado en la App es el paciente</strong>. Por lo tanto, el profesional que utiliza la App se compromete a obtener <strong>consentimiento firmado por el paciente</strong> para la incorporación de sus datos personales y de salud a la base de datos de la app.</p>
+    
+    <p>Este consentimiento debe especificar que la información será <i>anonimizada</i> y se utilizará únicamente para la gestión y análisis de la actividad del colectivo anestesiológico, con fines de investigación y mejora de la práctica médica. Puede encontrar modelos de consentimiento informado para pacientes adultos y pediátricos que incluyen la autorización de datos personales en el siguiente link:   </p>
+
+        <nav class="container-flex">
+            <button class="btn__secondary--outline">
+                <i class="fa fa-file-word fa-2x"></i><a href="./assets/docs/nivo-consentimiento-adultos.docx" target="_blank" class="btn__tertiary--link">Descargar consentimiento adultos
+                </a>
+            </button>
+            <button class="btn__secondary--outline">
+                <i class="fa fa-file-word fa-2x"></i>        
+                <a href="./assets/docs/nivo-consentimiento-pediatricos.docx" target="_blank" class="btn__tertiary--link">Descargar consentimiento pediatricos
+                </a>
+            </button>
+        </nav>
+
+    <div>
+        <p><strong>Desligamiento de Responsabilidad:</strong> La empresa no se hace responsable de la obtención del consentimiento del paciente; dicha obligación recae exclusivamente en el profesional que utiliza la App para el registro de datos anestésicos.</p>
+    </div>
+
+    <h3>5. Política de Privacidad y Cumplimiento de Normativa</h3>
+    <p>Puede acceder a nuestra política de privacidad de datos personales mediante el siguiente link:
+
+        <nav class="container-flex">
+            <button class="btn__secondary--outline">
+                <i class="fa fa-file-word fa-2x"></i>        
+                <a href="./assets/docs/nivo-consentimiento-pediatricos.docx" target="_blank" class="btn__tertiary--link">Descargar consentimiento pediatricos
+                </a>
+            </button>
+        </nav>
+
+        
+    <h3>6. Propiedad Intelectual</h3>
+    <p>Todo el contenido de la App, incluyendo pero no limitado a textos, gráficos, logotipos y software, es <strong>propiedad de la empresa</strong> y está protegido por las leyes de propiedad intelectual aplicables. Usted no puede reproducir, distribuir, modificar o crear obras derivadas de este contenido sin nuestro consentimiento previo por escrito.</p>
+
+    <h3>7. Limitación de Responsabilidad</h3>
+    <p>La App se proporciona <i>"tal cual"</i> y <i>"según disponibilidad"</i>. No garantizamos que la App será ininterrumpida, libre de errores o segura. En la máxima medida permitida por la ley, no seremos responsables de ningún daño indirecto, incidental, especial o consecuente que resulte del uso o la incapacidad de uso de la App.</p>
+
+    <h3>8. Modificaciones de los Términos</h3>
+    <p>Nos reservamos el derecho de <strong>modificar estos Términos en cualquier momento</strong>. Cualquier cambio se notificará a través de la App o por otros medios razonables. El uso continuado de la App después de dichas modificaciones constituirá su aceptación de los nuevos Términos.</p>
+
+    <h3>9. Terminación</h3>
+    <p>Podemos suspender o terminar su acceso a la App en cualquier momento, sin previo aviso y por cualquier motivo, incluyendo, entre otros, el incumplimiento de estos Términos.</p>
+
+    <h3>10. Ley Aplicable y Jurisdicción</h3>
+    <p>Estos Términos se rigen e interpretan de acuerdo con las <strong>leyes de la República Argentina</strong>. Cualquier disputa derivada del uso de la App o de estos Términos se resolverá en los <strong>tribunales de la Ciudad de Neuquén</strong>.</p>
+
+    <div>
+        <h3>11. Contacto</h3>
+        <p>Si tiene alguna pregunta sobre estos Términos, por favor, contáctenos en <a class="btn__tertiary" href="mailto:nivo@cares.ar">nivo@cares.ar</a></p>
+    </div>
 </div>
 </div>
