--- a/_includes/process.html
+++ b/_includes/process.html
@@ -6,23 +6,22 @@
             NIVO+ cubre todo el proceso anestésico, desde la evaluación inicial hasta el alta del paciente.
         </p>
         
-        <div class="slider-container">
+        <fig class="slider-container">
             <img class="image-slide active" src="./assets/img/nv_screen-01.jpg" alt="Evaluación Pre anestésica">
             <img class="image-slide" src="./assets/img/nv_screen-02.jpg" alt="Protocolo anestésico">
             <img class="image-slide" src="./assets/img/nv_screen-03.jpg" alt="Recuperación postanestésica">
-            <!-- <img class="image-slide" src="./assets/img/nv_screen-04.jpeg" alt="Medicación e informes"> -->
-        </div>
+        </fig>
+        <figcaption><i class="fa fa-search-plus"></i>Presionar la imagen para agrandar</figcaption>
 
         <div id="zoom-modal" class="zoom-modal">
-        <button size="md" class="fab__neutral--outline" id="zoomClose">&times;</button>
-        <img class="zoom-image" src="" alt="Zoomed image">
+            <button size="md" class="fab__neutral--outline" id="zoomClose">&times;</button>
+            <img class="zoom-image" src="" alt="Zoomed image">
         </div>
 
         <div class="fake-radio">
             <label class="radio-btn active" onclick="goToSlide(0)"></label>
             <label class="radio-btn" onclick="goToSlide(1)"></label>
             <label class="radio-btn" onclick="goToSlide(2)"></label>
-            <!-- <label class="radio-btn" onclick="goToSlide(3)"></label> -->
         </div>
     </div>
 
