--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -49,10 +49,9 @@
     <p>Puede acceder a nuestra política de privacidad de datos personales mediante el siguiente link:
 
         <nav class="container-flex">
-            <button class="btn__secondary--outline">
-                <i class="fa fa-file-word fa-2x"></i>        
-                <a href="./assets/docs/nivo-consentimiento-pediatricos.docx" target="_blank" class="btn__tertiary--link">Descargar consentimiento pediatricos
-                </a>
+            <button class="btn__secondary--outline modal--privacy">
+                <i class="fa fa-user-shield fa-1x"></i>
+                Ver política de privacidad        
             </button>
         </nav>
 
