--- a/_includes/privacy.html
+++ b/_includes/privacy.html
@@ -123,7 +123,7 @@
     
     <div>
         <p><i>"Si tenés dudas o necesitás orientación podés comunicarte al (54-11) 3988-3968 o a datospersonales@aaip.gob.ar</i></p>
-        <p><i>Para más información ingresa a: <a class="btn__tertiary--link" href="https://www.argentina.gob.ar/aaip/datospersonales">https://www.argentina.gob.ar/aaip/datospersonales"</a></i></p>
+        <p><i>Para más información ingresa a: <a class="btn__tertiary" href="https://www.argentina.gob.ar/aaip/datospersonales" target="_blank">https://www.argentina.gob.ar/aaip/datospersonales</a></i></p>
     </div>
     </div>
 </div>
