--- a/_includes/details.html
+++ b/_includes/details.html
@@ -10,7 +10,7 @@
             <div class="card__header">
                 <img src="./assets/img/nv_paper.jpg" class="img-circle warning">
                 <div class="card__content">
-                    <div class="card__badge warning">SECCIÓN A</div>
+                    <div class="card__badge warning">situación actual</div>
                     <h2 class="card__title">El desafío anestesiológico</h2>
                 </div>
             </div>
@@ -34,7 +34,7 @@
             <div class="card__header">
                 <img src="./assets/img/nv_mobile-v.jpg" class="img-circle success">
                 <div class="card__content">
-                    <div class="card__badge success">SECCIÓN B</div>
+                    <div class="card__badge success">propuesta</div>
                     <h2 class="card__title">La solución optimizada de NIVO+</h2>
                 </div>
             </div>
